--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,7 +1,7 @@
 extent.reporter.spark.start=true
 extent.reporter.spark.out=target/spark/report.html
 extent.reporter.spark.config=src/test/resources/spark-config.xml
-
+extent.reporter.spark.offlineMode=true
 
 #test,exception,category,device,author,log,dashboard - default order
 extent.reporter.spark.vieworder=dashboard,test,exception,category,device,author
