--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -4,4 +4,4 @@ extent.reporter.spark.config=src/test/resources/spark-config.xml
 extent.reporter.spark.offlineMode=true
 
 #test,exception,category,device,author,log,dashboard - default order
-extent.reporter.spark.vieworder=dashboard,test,exception,category,device,author
+extent.reporter.spark.viewConfigurer.viewOrder=dashboard,test,exception,category,device,author
